# web

./: .apps  .env.example  .gitignore  Cargo.toml  apps.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/algorithms/: Cargo.toml
apps/algorithms/algs-app/: index.html  package.json  tsconfig.json  vite.config.ts
apps/algorithms/algs-app/src/: main.ts
apps/algorithms/algs-app/src/components/: qs.tsx
apps/algorithms/algs-app/src/util/: rand.ts  url.ts
apps/algorithms/src/: main.rs  routes.rs
apps/algorithms/src/algorithms/: mod.rs  qs.rs
apps/axum-htmx/: Cargo.toml  index.html  package.json  tailwind.config.js
apps/axum-htmx/css/: index.css
apps/axum-htmx/src/: main.rs
apps/chat/: Cargo.toml
apps/chat/chat-app/: index.html  package.json  tailwind.config.js  vite.config.js
apps/chat/chat-app/create/: index.html
apps/chat/chat-app/rooms/: index.html
apps/chat/chat-app/src/: main.ts
apps/chat/public/: index.html
apps/chat/src/: main.rs
apps/chat/src/routes/: root.rs
apps/chess/: .air.toml  .gitignore  Makefile  go.mod  main.go  package.json  tailwind.config.js
apps/chess/cmd/: server.go
apps/cpus/: Cargo.toml
apps/cpus/cpus-app/: index.html  package.json  vite.config.ts
apps/cpus/src/: main.rs
apps/go-app/: main.go
apps/lexidb-docs/: astro.config.mjs  package.json  tailwind.config.cjs
apps/news/: Cargo.toml  index.html
apps/news/public/: index.html  signup.html
apps/news/src/: main.rs
apps/ocaml_htmx/: dune-project
apps/ocaml_htmx/lib/: dune
apps/ocaml_htmx/test/: dune
apps/portfolio/: .firebaserc  .gitignore  astro.config.mjs  package.json  tailwind.config.cjs  tailwind.config.js
apps/stock/: .air.toml  .env.example  .gitignore  Cargo.toml  Makefile  go.mod  go.sum  package.json  tailwind.config.js  vite.config.js  vite.config.ts
apps/stock/app/: index.html  package.json  tailwind.config.js  vite.config.js
apps/stock/cmd/: stock.go
apps/stock/internal/: routes.go
apps/stock/src/: main.rs
apps/stock/static/: index.html
apps/tmpl/: Cargo.toml
apps/tmpl/src/: main.rs
apps/tmpl/tmplapp/: index.html  package.json  vite.config.js  (+1 more)
apps/weather/: Cargo.toml  index.html
apps/weather/src/: main.rs
lib/chart/: index.html  package.json  tsconfig.json  vite.config.js
lib/observable/: package.json  vite.config.js
lib/ringbuffer/: package.json  vite.config.js
lib/router/: .gitignore  index.html  package.json  vite.config.js
(+160 files in other folders)
