[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
axum = { workspace = true, features = ["form"] }
serde = { workspace = true }
lexi_rust = { workspace = true }
chrono = "0.4.26"
serde_json = "1.0.100"
urlencoding = "2.1.2"
