[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.100"
rand = "0.8.5"
