[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
axum = { workspace = true }
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { workspace = true }
